css/style.css
/*==GENERIC RULE==*/

.font-w{
    color: white;
}

.font-grey{
    color: rgb(111, 111, 111);
}

:root{
    --grey-color: rgb(111, 111, 111);
    --white-color: rgb(255, 255, 255);
}

/*==MAIN==*/

/*==SECTION NAV==*/

/*--SECTION LINK-NAV--*/
.link-nav ul li a img{
    width: 25px;
    margin-right: 0.2rem;
}

.select-home{
    margin-left: -16px;
    padding-left: 0.8rem;
    border-left: solid 2px rgb(137, 200, 37);
}

#img-logo, .link-nav div{
    margin-top: 0.5rem;
}

.fa-square-plus{
    font-size: 35px;
    margin-right: 0.5rem;
}

.user-nav img{    
    width: 1.5rem;
    height: 1.5rem;
    margin-right: 0.5rem;
}

.link-nav #playlist-name li a{
    color: var(--grey-color);
}


/*--SECTION USER-NAV--*/
#download-app{
    border-bottom: 0.5px solid var(--grey-color);
}

.profile-nav img{
    background-color: var(--grey-color);
    border-radius: 50%;
}

.link-nav{
    overflow: hidden;
}

/*==SECTION CONTENTS==*/
.categories ul li a hr{
    border: solid 1px rgb(161, 237, 46);
    border-radius: 30px;
    margin: 0 15px;
    display: none;
}

.card p, .created-user p, .most-popular p{
    color: var(--grey-color);
}


/*==FOOTER==*/
.icon-play-now i{
    padding: 0 0.2rem;
}

.player div i{
    margin: 0 0.6rem;
    font-size: 18px;
}

.rule-l-player, .rule-l-volume{   
    height: 3px;
    background-color: var(--grey-color);
    margin: 0.5rem;
}

.rule-l-player{
    width: 30vw;
}

.rule-l-volume{
    width: 100px;
}

.rule-s{
    width: 25%;
    height: 3px;
    background-color: var(--white-color);
    position: relative;
}

.dot{
    display: none;
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background-color: var(--white-color);
    position: absolute;
    top: -4.5px;
    right: -1%;
}

.command-player i{
    padding: 0 0.3rem;
    font-size: 13px;
}

.fa-play{
    padding: 0.3rem;
    border: solid 2px;
    border-radius: 50%;
}

/*==MEDIA QUERY==*/
@media screen and (max-width: 991px){
    .container-cards .card{
        width: calc(100% / 4);
    }
}    

@media screen and (max-width: 576px){
    .container-cards .card{
        width: calc(100% / 2);
    }
}

